[package]
name = "rust_utilities"
description = "Utilities for Rust"
authors = ["MedzikUser <nivua1fn@duck.com>"]
license = "MIT"
keywords = ["crypto", "cryptography"]
homepage = "https://github.com/MedzikUser/rust-utilities"
repository = "https://github.com/MedzikUser/rust-utilities.git"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]

full = ["crypto", "sha"]
crypto = []
sha = ["sha-1", "sha2", "hex"]

# crypto
[dependencies.sha-1]
version = "0.10.0"
optional = true
[dependencies.sha2]
version = "0.10.2"
optional = true
[dependencies.hex]
version = "0.4.3"
optional = true
