[package]
name = "rust_utilities"
description = "Utilities for Rust"
authors = ["MedzikUser <nivua1fn@duck.com>"]
license = "MIT"
keywords = ["crypto", "cryptography"]
homepage = "https://github.com/MedzikUser/rust-utilities"
repository = "https://github.com/MedzikUser/rust-utilities.git"
version = "0.2.0"
edition = "2021"

[features]
default = ["full"]
full = ["crypto", "sha", "jsonwebtoken"]
crypto = []
sha = ["sha-1", "sha2", "hex", "crypto"]
jsonwebtoken = ["dep:jsonwebtoken", "chrono", "crypto"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
# crypto
sha-1 = { version = "0.10.0", optional = true }
sha2 = { version = "0.10.2", optional = true }
hex = { version = "0.4.3", optional = true }
jsonwebtoken = { version = "8.1.0", optional = true }
chrono = { version = "0.4.19", optional = true }
